style.css
/*defining colour variables for the website */
:root {
    --primary-blue: #0056b3;
    --dark-blue: #003d80;
    --light-blue: #e6f0ff;
    --text-dark: #1a1a1a;
    --background: #ffffff;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

/* body */

body {
    font-family: Arial, sans-serif;
    background: #f4f6f9;
    color: var(--text-dark);
}

/* skip-link */

.skip-link {
    position: absolute;
    top: -80px;
    left: 10px;
    background: #ffd166;
    color: #000;
    padding: 10px 16px;
    font-weight: bold;
    border-radius: 6px;
    text-decoration: none;
    z-index: 2000;
}

.skip-link:focus {
    top: 10px;
}

/* header styling */

header {
    background: var(--primary-blue);
    color: white;
    padding: 20px;
}

#tel {
    margin-top: 5px;
}

.top-bar {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.logo-container {
    display: flex;
    align-items: center;
    gap: 10px;
}

.logo {
    width: 120px;
    height: auto;
}


.info {
    font-weight: bold;
    display: flex;
    align-items: center;
    gap: 12px;
}

/* navbar styling */

nav {
    background: var(--dark-blue);
    width: 100%;
    text-align: center;
    padding: 12px 0;
    position: sticky;
    top: 0;
    z-index: 999;
}

nav a {
    color: white;
    text-decoration: none;
    margin: 0 20px;
    font-weight: 500;
    display: inline-block;
    transition: transform 0.2s ease, color 0.2s ease;
}

nav a:hover {
    color: #ffd166;
    background-color: var(--dark-blue);
    transform: scale(1.08);
}

/* hero section styling */

#hero {
    width: 100%;
    height: 500px;
    background: url('images/car-hero.png') center/cover no-repeat;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: white;
    position: relative;
}

#hero::before {
    content: "";
    position: absolute;
    inset: 0;
    background: rgba(0, 0, 0, 0.3);
}


#hero h2,
#hero p {
    position: relative;
    z-index: 2;
    background-color: var(--dark-blue);

}

/* main content styling */

main {
    max-width: 1100px;
    margin: auto;
}

section h2 {
    margin-top: 40px;
    margin-bottom: 20px;
    text-align: center;
}


/* search styling */

#search {
    max-width: 800px;
    margin: -80px auto 40px;
    background: white;
    padding: 30px;
    border-radius: 12px;
    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.25);
    position: relative;
    z-index: 1;
}


#search form {
    display: grid;
    grid-template-columns: 1fr;
    gap: 16px;
}

.form-group {
    display: flex;
    flex-direction: column;
}

.form-group label,
#search>form>fieldset>label {
    font-weight: 600;
    column-rule-color: #1a1a1a;
    margin-bottom: 10px;
}

#search input,
#search select {
    width: 100%;
    padding: 12px;
    border-radius: 8px;
    border: none;
    background: #f1f3f5;
    font-size: 14px;
    box-sizing: border-box;
}

fieldset {
    border: none;
    padding: 0;
    margin: 0;
}

legend {
    font-weight: 600;
    font-size: 14px;
    color: #6c757d;
    margin-bottom: 10px;
}

.fuel-group legend {
    font-weight: 600;
    color: #1a1a1a;
    font-size: 16px;
}

.fuel-group {
    grid-column: span 2;
    display: flex;
    gap: 20px;
    flex-wrap: wrap;
    align-items: center;
    margin-top: 10px;
}

.fuel-group label {
    display: flex;
    align-items: center;
    gap: 5px;
    cursor: pointer;
}

.fuel-group input {
    accent-color: var(--primary-blue);

}

.price-group {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 30px;
    margin-top: 10px;
}

/* buttons */
.button-group {
    display: grid;
    grid-template-columns: 3fr 1fr;
    gap: 15px;
    margin-top: 16px;
}

.button-group button {
    padding: 12px;
    border-radius: 25px;
    border: none;
    cursor: pointer;
    font-size: 14px;
    background: var(--primary-blue);
    color: white;
    font-weight: bold;
    font-size: 15px;
    transition:
        transform 0.2s ease,
        box-shadow 0.2s ease,
        background 0.2s ease,
        color 0.2s ease;
}

#clearBtn {
    background: #6c757d;
    color: white;
}

.button-group button:hover {
    transform: translateY(-2px) scale(1);
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
    color: #ffd166;
}

/* responsive */

@media (max-width: 700px) {
    #search form {
        grid-template-columns: 1fr;
    }

    .fuel-group {
        grid-column: span 1;
    }

    .price-group {
        grid-template-columns: 1fr;
    }

}

/* results container */

.hidden {
    display: none;
}

#resultContainer {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 25px;
    margin-top: 30px;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
}


/* car cards styling */

.car-card {
    background: white;
    border-radius: 14px;
    overflow: hidden;
    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
    display: flex;
    flex-direction: column;
}

.car-card:hover {
    transform: translateY(-5px);
}

.car-card img {
    width: 100%;
    height: 180px;
    object-fit: cover;
}

.car-card h3 {
    margin: 10px 15px;
}

.car-card p {
    margin: 5px 15px;
}

.car-card button {
    margin: 15px;
    width: calc(100% - 30px);
}

/* error image */

.image-error {
    width: 100%;
    height: 180px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #f1f3f5;
    color: #666;
    font-style: italic;
    font-size: 14px;
    border-bottom: 1px solid #ddd;
}

.image-wrapper img {
    width: 100%;
    height: 180px;
    object-fit: cover;
}

.details-btn {
    background-color: var(--dark-blue);
    color: white;
    border-radius: 5px;
    padding: 10px;
}

/* why US section */

#whyUs {
    background: #eaf2ff;
    width: 100%;
    padding: 60px 20px;
}

.whyus-container {
    display: flex;
    gap: 30px;
    justify-content: center;
    margin-top: 30px;
    flex-wrap: wrap;
}

.whyus-wrapper {
    max-width: 1100px;
    margin: auto;
    text-align: center;
}

.whyus-card {
    background: white;
    padding: 25px;
    border-radius: 12px;
    width: 280px;
    text-align: center;
    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.08);

    transition: transform 0.2s ease, box-shadow 0.2s ease;
}


.whyus-container h3 {
    margin-bottom: 10px;
    font-size: 18px;
}

.whyus-container p {
    color: var(--primary-blue);
    font-size: 14px;
    line-height: 1.5;
}

.whyus-icon {
    width: 60px;
    height: 60px;
    margin: 0 auto 15px;
    background: #dbe7ff;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 24px;
}

.whyus-container article:hover {
    transform: translateY(-5px);
    box-shadow: 0 12px 30px rgba(0, 0, 0, 0.12);
}

/* brand display */

.brands-container {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
    gap: 25px;
    margin-top: 30px;
}

#brandsHeading {
    text-align: center;
    padding-top: 30px;
    color: var(--dark-blue);
}

.brand-card {
    background: white;
    padding: 20px;
    border-radius: 12px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    min-height: 140px;
    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.08);
    transition: transform 0.2s ease, box-shadow 0.2s ease;
}

/* logo */
.brand-card img {
    width: 80px;
    height: 80px;
    object-fit: contain;
}

.brand-card p {
    font-weight: 600;
}

.brand-card:hover {
    background: #f8f9fa;
}

/* featured vehicles */

.featured-container,
#resultContainer {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
    gap: 25px;
    margin-top: 30px;
}

/* reviews */

.review-container {
    display: flex;
    gap: 20px;
    margin-top: 20px;
}

.review {
    background: var(--light-blue);
    padding: 15px;
    border-left: 5px solid var(--primary-blue);
}


/* footer */

footer {
    background: var(--dark-blue);
    color: white;
    padding: 30px;
    margin-top: 40px;
    display: flex;
    flex-direction: column;
    gap: 20px;
    text-align: center;
}


footer section {
    width: 100%;
}

footer p {
    margin: 5px 0;
}

@media (min-width: 768px) {
    footer {
        flex-direction: row;
        justify-content: space-between;
        align-items: flex-start;
        text-align: left;
    }

    footer section {
        flex: 1;
    }
}

/* back to top */

#backToTop {
    position: fixed;
    bottom: 30px;
    right: 30px;
    border: none;
    padding: 12px 16px;
    font-size: 20px;
    border-radius: 50%;
    cursor: pointer;
    display: none;
}

#backToTop.show {
    display: block;
    background-color: var(--primary-blue);
    color: white;
}

